--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,9 @@ body{
 
         font-size: 3rem;
         text-align: center;
+        span {
+            font-size: 2rem;
+        }
     }
     h2 {
         font-size: 2rem;
@@ -34,7 +37,8 @@ body{
 
     li{
         font-size: 2rem;
-        list-style: none;
+        list-style-position: inside;
+        text-align: center;
     }
     
 }
@@ -44,6 +48,7 @@ body{
     align-items: center;
     max-width: 500px;
     margin: 0 auto;
+    gap: 0;
 }
 .btn{
     all: unset;
@@ -67,9 +72,10 @@ body{
 input{
     border: var(--border);
     border-radius: var(--border-radius);
-    width: 20%;
+    width: 5rem;
     font-size: 3rem;
     text-align: center;
+    padding: .5rem 0 .5rem 1rem;
 }
 
 label {
